--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "laraveles/spanish": "^1.5",
-        "livewire/livewire": "^2.10"
+        "livewire/livewire": "^2.10",
+        "mediconesystems/livewire-datatables": "^0.9.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
